Fixed an issue where paragraph would shift when scrolling on mobile

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   max-width: 100% !important;
   overflow-x: hidden !important;
+  overflow-y: scroll;
   #about-zone{
     position: relative;
     top: 5%;
